# law-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  package.json  pyproject.toml  tsconfig.json
apps/api/app/: __init__.py  cli.py  main.py  schemas.py  store.py
apps/api/app/api/v1/: routes.py
apps/api/app/auth/: __init__.py  security.py  service.py  sms.py
apps/api/app/cases/: __init__.py  catalog.py  self_service.py  service.py
apps/api/app/core/: config.py  database.py  schema.py
apps/api/app/events/: __init__.py  service.py
apps/api/app/evidence/: __init__.py  service.py
apps/api/app/workflows/: __init__.py  case_assessment.py  llm.py  service.py
apps/api/src/: ai.ts  app.test.ts  app.ts  data.ts  server.ts  store.ts  types.ts
apps/api/tests/: test_api.py  test_mvp_infra.py  test_sms.py
apps/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  server.mjs  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  i18n.ts  main.tsx  router.tsx  styles.css  types.ts
apps/web/src/components/: StateBlock.tsx
apps/web/src/hooks/: useCaseEvents.ts  (+2 more)
docker/: Dockerfile  README.md  deploy.sh  docker-compose.infra.prod.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prod.env.example
openspec/changes/add-role-based-registration/: design.md  proposal.md  tasks.md
openspec/changes/polish-mobile-h5-shell-and-role-guards/: design.md  proposal.md  tasks.md
(+43 files in other folders)
